gitops/manifests/vaultwarden/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-admin-only
  namespace: vaultwarden
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.0/16
      - 100.64.0.0/10
      - 10.42.0.0/16
      - 10.100.0.0/24
      - 10.101.0.0/24
